<resources>
    <string name="app_name">My Story Maker</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Unggah Momen Pentingmu, Rekam Memori Bersama Story App!</string>
    <string name="title_welcome_page">Selamat datang di Story App!</string>
    <string name="title_signup_page">Signup</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Login</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Siap Untuk Abadikan Momenmu!.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="error_message">Terjadi kesalahan pada server kami.\nMohon coba lagi nanti.</string>
    <string name="ok">Oke</string>
    <string name="error_validation">Please make sure all the input field is correct!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="story_app">Story App</string>
    <string name="continue_to_app">Continue To App</string>
    <string name="register">Don\'t have an account? Register</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="register_successful">Account was successfully registered</string>
    <string name="name_cannot_empty">Name cannot be empty</string>
    <string name="email_cannot_empty">Email cannot be empty</string>
    <string name="password_minimum">Paasword Should Be 8 Character Minimum</string>
    <string name="have_account">Already have an account?</string>
    <string name="post_a_picture">Post a picture</string>
    <string name="greeting_picture">Greeting picture</string>
    <string name="story_picture">Story picture</string>
    <string name="open_gallery">Open gallery</string>
    <string name="rotate_camera">Rotate camera</string>
    <string name="take_picture">Take picture</string>
    <string name="logout">Log Out</string>
    <string name="no_stories_found">No stories found</string>
    <string name="login_Awal">Get Started</string>
    <string name="imageview">Image View</string>
    <string name="enter_description">Masukkan Deskripsi Foto</string>
    <string name="addstory">Posting Story</string>
    <string name="gallery">My Gallery</string>
    <string name="camera">Open Camera</string>
    <string name="permission">Failed to get permission</string>
    <string name="upload_picture">You have to input a picture and description</string>
    <string name="description">Add a description</string>
    <string name="story">Story</string>
    <string name="story_detail">Story Detail</string>
    <string name="Login">Login</string>
    <string name="register_Awal">Register</string>
    <string name="Register">Register</string>
    <string name="title_activity_maps">MapsActivity</string>


</resources>