<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginApp.view.postingStory.PostingActivity">


    <TextView
        android:id="@+id/tvNamePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="432dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:transitionName="name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Name" />

    <EditText
        android:id="@+id/tvDescriptionPost"
        android:layout_width="339dp"
        android:layout_height="111dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="132dp"
        android:autofillHints="Description"
        android:background="@drawable/dr_description_container"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_description"
        android:inputType="textMultiLine|textPersonName"
        android:padding="16dp"
        android:paddingBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_image"
        android:layout_width="266dp"
        android:layout_height="273dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topGuideline">

        <ImageView
            android:id="@+id/iv_photo_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/imageview" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/cv_image"
        app:layout_constraintStart_toStartOf="@id/cv_image"
        app:layout_constraintTop_toBottomOf="@id/cv_image">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_gallery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/gallery"
            app:backgroundTint="@color/cardview_dark_background" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="33dp"
            android:text="@string/camera"
            app:backgroundTint="@color/cardview_dark_background" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_upload"
        android:layout_width="226dp"
        android:layout_height="57dp"
        android:layout_marginTop="200dp"
        android:text="@string/addstory"
        app:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_layout" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/white"
        android:indeterminateTintMode="src_atop"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
