<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginApp.view.CameraStory.CameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/view_finder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_button_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/btn_capture"
        android:layout_width="69dp"
        android:layout_height="62dp"
        android:layout_marginStart="168dp"
        android:layout_marginBottom="28dp"
        android:clickable="true"
        android:contentDescription="@string/take_picture"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_button_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_capture" />

    <ImageView
        android:id="@+id/btn_gallery"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:contentDescription="@string/open_gallery"
        android:focusable="true"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_capture"
        app:srcCompat="@drawable/ic_baseline_photo_library_24" />

    <ImageView
        android:id="@+id/btn_rotate"
        android:layout_width="38dp"
        android:layout_height="41dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:contentDescription="@string/rotate_camera"
        android:focusable="true"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_button_bar"
        app:layout_constraintEnd_toStartOf="@+id/btn_capture"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_cameraswitch" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/bottom_button_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_capture"></View>

</androidx.constraintlayout.widget.ConstraintLayout>
